overflow fix

--- a/responsive-grid.css
+++ b/responsive-grid.css
@@ -11,6 +11,12 @@ html{
   scroll-behavior: smooth;
 }
 
+.wrapper {
+    position: relative;
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body{
     overflow-x: hidden;
     margin:0;
