--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,7 @@ outline: none;
       padding-top: 70vw;
       border-radius: 50%;
       background:#0059b3;
-      top:-20%;
+      top:-20vh;
       right:-35vw;
     }
 
